--- a/index.html
+++ b/index.html
@@ -86,109 +86,57 @@
     </section>
 
 
-      <!-- Team Projects -->
-    <section id="projects" class="section section-projects">
-      <div class="container projects-layout">
-        <!-- 왼쪽 메뉴 -->
-        <aside class="projects-menu">
-          <span class="menu-link active">— 팀 프로젝트</span>
-        </aside>
+<!-- Projects -->
+<section id="projects" class="section section-projects">
+  <div class="container projects-layout">
 
-        <!-- 오른쪽: 프로젝트 카드 그리드 -->
-        <div class="projects-list">
-          <div class="project-card-grid">
+    <!-- 왼쪽 메뉴: Projects 제목 없이 2개만 -->
+    <aside class="projects-menu">
+      <a class="menu-link is-active" href="#team-projects">— 팀 프로젝트</a>
+      <a class="menu-link" href="#personal-projects">— 개인 프로젝트</a>
+    </aside>
 
-            <!-- 카드 1: AI 스트레스 분석 앱 -->
-            <a class="project-card" href="ppt/stress.pdf" target="_blank">
+    <!-- 오른쪽: 프로젝트 카드 -->
+    <div class="projects-list">
 
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            AI 스트레스 분석 앱
-            </div>
+      <!-- 팀 프로젝트 -->
+      <div id="team-projects" class="project-group">
+        <div class="project-card-grid">
 
-            <!-- 이미지 -->
+          <a class="project-card" href="ppt/stress.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">AI 스트레스 분석 앱</div>
             <img src="images/proj_stress.png" alt="AI 스트레스 분석 앱" />
+          </a>
 
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>AI 스트레스 분석 앱</h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
+          <a class="project-card" href="ppt/hotel.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">호텔 위험도 분석</div>
+            <img src="images/proj_hotel.png" alt="호텔 위험도 분석" />
+          </a>
 
-
-             <!-- 카드 2: 호텔 위험도 분석 -->
-            <a class="project-card" href="ppt/hotel.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            호텔 위험도 분석
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_hotel.png" alt="청주 교통사고 위험도 분석" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>네이버 뉴스 댓글 감성 분석/h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-
-    <!--  Projects -->
-    <section id="projects" class="section section-projects">
-      <div class="container projects-layout">
-        <!-- 왼쪽 메뉴 -->
-        <aside class="projects-menu">
-          <span class="menu-link active">— 개인 프로젝트</span>
-        </aside>
-
-       
-        <!-- 오른쪽: 프로젝트 카드 그리드 -->
-        <div class="projects-list">
-          <div class="project-card-grid">
-
-            <!-- 카드 3: 청주교통사고-->
-            <a class="project-card" href="ppt/cheongju.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            주문 자동화 RPA
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_cheongju.png" alt="청주 교통사고 위험도 분석" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>청주 교통사고 위험도 분석</h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-            <!-- 카드 4: 뉴스댓글-->
-            <a class="project-card" href="ppt/news.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            네이버 뉴스 댓글 감성 분석
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_news.png" alt="cf" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>네이버 뉴스 댓글 감성 분석</h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-          </div>
         </div>
       </div>
-    </section>
+
+      <!-- 개인 프로젝트 -->
+      <div id="personal-projects" class="project-group">
+        <div class="project-card-grid">
+
+          <a class="project-card" href="ppt/cheongju.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">청주 교통사고 분석</div>
+            <img src="images/proj_cheongju.png" alt="청주 교통사고 분석" />
+          </a>
+
+          <a class="project-card" href="ppt/news.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">네이버 뉴스 댓글 감성 분석</div>
+            <img src="images/proj_news.png" alt="네이버 뉴스 댓글 감성 분석" />
+          </a>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
   </main>
 
