--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                target="_blank" class="btn ghost">
               GitHub 포트폴리오
               </a>
-              
+
             <a href="ppt/profile.pdf"
                target="_blank" class="btn primary">
               이력서 보기 
@@ -96,7 +96,7 @@
     <!-- 왼쪽 메뉴: Projects 제목 없이 2개만 -->
     <aside class="projects-menu">
       <a class="menu-link is-active" href="#team-projects">— 팀 프로젝트</a>
-      <a class="menu-link" href="#personal-projects">— 개인 프로젝트</a>
+      <a class="menu-link menu-link--personal" href="#personal-projects">— 개인 프로젝트</a>
     </aside>
 
     <!-- 오른쪽: 프로젝트 카드 -->
