--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- 왼쪽 메뉴: Projects 제목 없이 2개만 -->
     <aside class="projects-menu">
       <a class="menu-link is-active" href="#team-projects">— 팀 프로젝트</a>
-      <a class="menu-link menu-link--personal" href="#personal-projects">— 개인 프로젝트</a>
+      <a class="menu-link is-active menu-link--personal" href="#personal-projects">— 개인 프로젝트</a>
     </aside>
 
     <!-- 오른쪽: 프로젝트 카드 -->
