--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         <div class="project-card-grid">
 
           <a class="project-card" href="ppt/cheongju.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">공정 데이터 분석</div>
+            <img src="images/proj_cheongju.png" alt="공정 데이터 분석" />
+          </a>
+          
+          <a class="project-card" href="ppt/cheongju.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">청주 교통사고 분석</div>
             <img src="images/proj_cheongju.png" alt="청주 교통사고 분석" />
           </a>
