--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
       <div id="team-projects" class="project-group">
         <div class="project-card-grid">
 
-          <a class="project-card" href="ppt/stress.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="project-card" href="ppt/aistress.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">AI 스트레스 분석 앱</div>
             <img src="images/proj_stress.png" alt="AI 스트레스 분석 앱" />
           </a>
 
-          <a class="project-card" href="ppt/hotel.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="project-card" href="ppt/hotelrisk.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">호텔 위험도 분석</div>
             <img src="images/proj_hotel.png" alt="호텔 위험도 분석" />
           </a>
@@ -123,17 +123,17 @@
       <div id="personal-projects" class="project-group">
         <div class="project-card-grid">
 
-          <a class="project-card" href="ppt/cheongju.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="project-card" href="ppt/bosch.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">공정 데이터 분석</div>
-            <img src="images/proj_cheongju.png" alt="공정 데이터 분석" />
+            <img src="images/proj_bosch.png" alt="공정 데이터 분석" />
           </a>
           
-          <a class="project-card" href="ppt/cheongju.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="project-card" href="ppt/accident.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">청주 교통사고 분석</div>
             <img src="images/proj_cheongju.png" alt="청주 교통사고 분석" />
           </a>
 
-          <a class="project-card" href="ppt/news.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="project-card" href="ppt/comment.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">네이버 뉴스 댓글 감성 분석</div>
             <img src="images/proj_news.png" alt="네이버 뉴스 댓글 감성 분석" />
           </a>
