--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
              <span>데이터 분석 & 개발</span>
           </p>
           <p class="hero-desc">
-            데이터로 문제를 구조화하고,<br />
-            인사이트를 서비스로 연결합니다.
+            데이터를 통해 문제를 구조화하고,<br />
+            분석 결과를 실제 서비스와 의사결정에 연결합니다.
           </p>
 
           <div class="hero-buttons">
@@ -72,14 +72,14 @@
           <!-- 오른쪽: 짧은 소개 3–4줄 -->
           <div class="about-text">
             <p>
-              공공데이터와 웹 데이터를 활용해 <b>“어떤 문제를 해결할 것인지”</b>를 먼저 정의합니다.
+              데이터를 기반으로 해결할 문제를 먼저 정의하고,
             </p>
             <p>
-              그에 맞는 데이터 수집·전처리·분석 과정을 설계하고,
-              실제 사용자에게 도움이 되는 결과를 만드는 것을 목표로 합니다.
+              수집·전처리·분석 과정을 구조화하여
+              실제 의사결정과 서비스에 활용 가능한 결과를 만드는 것을 목표로 합니다.
             </p>
             <p>
-              단순 리포트가 아닌, <b>웹 서비스/대시보드 형태</b>로 구현하는 작업을 좋아합니다.
+              단순 리포트가 아닌, <b>웹 서비스/대시보드 형태</b>로 결과를 구현하는 작업을 좋아합니다.
             </p>
           </div>
 
