--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
           <a class="project-card" href="ppt/bosch.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">공정 데이터 분석</div>
-            <img src="images/proj_bosch.png" alt="공정 데이터 분석" />
+            <img src="images/bosch.png" alt="공정 데이터 분석" />
           </a>
           
           <a class="project-card" href="ppt/accident.pdf" target="_blank" rel="noopener noreferrer">
