--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
             <img src="images/bosch.png" alt="공정 데이터 분석" />
           </a>
           
+          <a class="project-card" href="ppt/secom.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">SECOM 데이터 분석</div>
+            <img src="images/secom.png" alt="SECOM 데이터 분석" />
+          </a>
+         
           <a class="project-card" href="ppt/accident.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">청주 교통사고 분석</div>
             <img src="images/proj_cheongju.png" alt="청주 교통사고 분석" />
