--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
             <img src="images/secom.png" alt="SECOM 데이터 분석" />
           </a>
          
+          <a class="project-card" href="ppt/robot.pdf" target="_blank" rel="noopener noreferrer">
+            <div class="card-header">ROS 2 기반 로봇암 제어</div>
+            <img src="images/robot.png" alt="ROS 2 기반 로봇암 제어" />
+          </a>
+        
           <a class="project-card" href="ppt/accident.pdf" target="_blank" rel="noopener noreferrer">
             <div class="card-header">청주 교통사고 분석</div>
             <img src="images/proj_cheongju.png" alt="청주 교통사고 분석" />
